[FEAT]->[082524]->Pointer in C {CodeBase}